# ids-ml-exploration

./: .gitignore  Vagrantfile  commands_used_for_traffic_capture.md  defender_setup.sh  lint.sh  make_dvwa_accessible_to_lan.sh  pyproject.toml  readme.md  requirements.txt
model/: common.py  constants.py  gooey.py  k_nearest_neighbor.py  logistic_regression.py  mlp_neural_network.py  model_comparison.py  model_predict.py  pcap_predict.py  predict_captures_script.py  random_forest.py  support_vector_machine.py  train_production_models.py
model/benign/: 230327100206_benign_browsing_from_attacker.csv  230327100206_benign_browsing_from_attacker.pcap  dns_query_benign.csv  dns_query_benign.pcap  ftp_benign.csv  ftp_benign.pcap  ssh_benign.csv  ssh_benign.pcap  telnet_benign.csv  telnet_benign.pcap
model/malicious/: 230324073920_brute_force_capture.csv  230324081220_DoS_capture.csv  230327104945_sqli.csv  230327104945_sqli.pcap  230327105302_command_injection.csv  230327105302_command_injection.pcap  230419083801_xss-capture.csv  230419083801_xss-capture.pcap
model/notebooks_and_plots/: confusion_matrix_plot.ipynb  dataset_exploration.ipynb  knn-diagram.ipynb  learning_curves.ipynb  logit-diagram.ipynb  manual_plots.ipynb  rf-diagram.ipynb
model/trained_models/: production_logisticregression_model_20230421_212257.skops  production_mlpclassifier_model_20230421_211006.skops
